Updated landing page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="inner">
-        <h1>Team Rocket</h1>
+        <h1>Plane Sight</h1>
         <h2>Team Rocket, blast off at the speed of light!</h2>
         <a href="https://github.com/mvyawaha/teamrocket" class="button"><small>View project on</small> GitHub</a>
       </div>
